apps/consul/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: consul
  labels:
    app.kubernetes.io/name: consul
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  serviceName: consul
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: consul
  template:
    metadata:
      labels:
        app: consul
        app.kubernetes.io/name: consul
        app.kubernetes.io/instance: consul-prod
        app.kubernetes.io/component: consul
    spec:
      securityContext:
        runAsUser: 15344
        runAsGroup: 15344
        fsGroup: 15344
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: "consul"
          image: "hashicorp/consul:1.20.3"
          imagePullPolicy: "IfNotPresent"
          command:
            - consul
            - agent
            - -config-file=/config/consul.hcl
          ports:
            - containerPort: 8500
              name: "consul"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 15344
            runAsGroup: 15344
            capabilities:
              drop:
                - "ALL"
            seccompProfile:
              type: "RuntimeDefault"
          livenessProbe:
            tcpSocket:
              port: "consul"
            initialDelaySeconds: 15
          readinessProbe:
            tcpSocket:
              port: "consul"
            initialDelaySeconds: 5
          resources:
            limits:
              memory: "256Mi"
            requests:
              cpu: "5m"
              memory: "32Mi"
          volumeMounts:
            - name: storage
              mountPath: /consul
            - name: run
              mountPath: /var/run
            - name: tmp
              mountPath: /tmp
            - name: config
              mountPath: /config
              readOnly: true
      volumes:
        - name: storage
          emptyDir:
            sizeLimit: 1Gi
        - name: tmp
          emptyDir:
            sizeLimit: 50M
        - name: run
          emptyDir:
            sizeLimit: 5M
        - name: config
          configMap:
            name: consul-config
