apps/consul/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: consul
spec:
  ports:
    - port: 80
      targetPort: consul
  selector:
    app.kubernetes.io/name: consul
