apps/consul/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: consul
spec:
  podSelector: {}
  ingress: []
